--- a/projects/VC100/metar/metar.vcxproj
+++ b/projects/VC100/metar/metar.vcxproj
@@ -192,9 +192,8 @@
     <ClCompile Include="..\..\..\src\Main\metar_main.cxx" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="metar.vcxproj">
-      <Project>{fc424099-5d77-4bc2-a93f-2ee59f816b51}</Project>
-      <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
+    <ProjectReference Include="..\..\..\..\SimGear\projects\VC100\SimGear.vcxproj">
+      <Project>{22540cd3-d3ca-4c86-a773-80aeee3acded}</Project>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
