Remove C++ autobrake code - this can all be done easier in XML now!

--- a/src/Autopilot/Makefile.am
+++ b/src/Autopilot/Makefile.am
@@ -2,7 +2,6 @@ noinst_LIBRARIES = libAutopilot.a
 
 libAutopilot_a_SOURCES = \
 	route_mgr.cxx route_mgr.hxx \
-	xmlauto.cxx xmlauto.hxx \
-	autobrake.cxx autobrake.hxx
+	xmlauto.cxx xmlauto.hxx 
 
 INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src
