Wrap SGEphemeris in a subsytem/property interface, and remove from mainloop.

--- a/projects/VC90/FlightGear/FlightGear.vcproj
+++ b/projects/VC90/FlightGear/FlightGear.vcproj
@@ -3485,6 +3485,14 @@
 				RelativePath="..\..\..\src\Environment\ridge_lift.hxx"
 				>
 			</File>
+			<File
+				RelativePath="..\..\..\src\Environment\ephemeris.cxx"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\Environment\ephemeris.hxx"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Lib_Model"
