--- a/src/Environment/Makefile.am
+++ b/src/Environment/Makefile.am
@@ -12,6 +12,7 @@ libEnvironment_a_SOURCES = \
 	fgwind.cxx fgwind.hxx \
 	atmosphere.cxx atmosphere.hxx \
 	precipitation_mgr.cxx precipitation_mgr.hxx \
-	ridge_lift.cxx ridge_lift.hxx
+	ridge_lift.cxx ridge_lift.hxx \
+	ephemeris.cxx ephemeris.hxx 
 
 INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src
