--- a/src/FDM/Makefile.am
+++ b/src/FDM/Makefile.am
@@ -11,6 +11,8 @@ noinst_LIBRARIES = libFlight.a
 
 libFlight_a_SOURCES = \
 	flight.cxx flight.hxx \
+	fdm_shell.cxx fdm_shell.hxx \
+	flightProperties.cxx flightProperties.hxx \
 	groundcache.cxx groundcache.hxx \
 	UFO.cxx UFO.hxx \
 	NullFDM.cxx NullFDM.hxx
