Create TimeManager subsystem, and collect the time related code out of main.cxx and fg_init.cxx into it. Remove the unfortunately named 'tmp.[cxx|hxx]', pushing the remaining code in FGLight.

--- a/src/Time/Makefile.am
+++ b/src/Time/Makefile.am
@@ -3,6 +3,6 @@ noinst_LIBRARIES = libTime.a
 libTime_a_SOURCES = \
 	light.cxx light.hxx \
 	sunsolver.cxx sunsolver.hxx \
-	tmp.cxx tmp.hxx
+	TimeManager.cxx TimeManager.hxx
 
 INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src
