--- a/src/FDM/JSBSim/math/Makefile.am
+++ b/src/FDM/JSBSim/math/Makefile.am
@@ -2,10 +2,10 @@ noinst_LIBRARIES = libMath.a
 
 libMath_a_SOURCES = FGColumnVector3.cpp FGFunction.cpp FGLocation.cpp FGMatrix33.cpp \
                     FGPropertyValue.cpp FGQuaternion.cpp FGRealValue.cpp FGTable.cpp \
-                    FGCondition.cpp
+                    FGCondition.cpp FGRungeKutta.cpp
 
 noinst_HEADERS = FGColumnVector3.h FGFunction.h FGLocation.h FGMatrix33.h \
                  FGParameter.h FGPropertyValue.h FGQuaternion.h FGRealValue.h FGTable.h  \
-                 FGCondition.h
+                 FGCondition.h FGRungeKutta.h
 
 INCLUDES = -I$(top_srcdir)/src/FDM/JSBSim
