Keep the windows users happy with the new JSBSim merge
Added FGRungeKutta to the project

--- a/projects/VC90/FlightGear/FlightGear.vcproj
+++ b/projects/VC90/FlightGear/FlightGear.vcproj
@@ -953,6 +953,14 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\src\Fdm\JSBSim\math\FGRungeKutta.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\Fdm\JSBSim\math\FGRungeKutta.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\Fdm\JSBSim\math\FGFunction.cpp"
 					>
 				</File>
