--- a/configure.ac
+++ b/configure.ac
@@ -179,13 +179,13 @@ AM_CONDITIONAL(ENABLE_SP_FDM, test "x$enable_sp_fdms" != "xno")
 
 # Specify whether we want to compile ATCDCL.
 # default to with_atcdcl=yes
-AC_ARG_ENABLE(atcdcl, [  --enable-atcdcl                Compile and link the depricated atc/ai module], [enable_atcdcl="$enableval"] )
-if test "x$enable_atcdcl" != "xno"; then
+AC_ARG_ENABLE(atcdcl, [  --enable-atcdcl                Compile and link the depricated atc/ai module], [], [enable_atcdcl="$enableval"] )
+if test "x$enable_atcdcl" = "xyes"; then
     AC_DEFINE([ENABLE_ATCDCL], 1, [Define to include old ATC/AI module])
 else
     AC_DEFINE([ENABLE_ATCDCL], 0, [Define to include old ATC/AI module])
 fi
-AM_CONDITIONAL(ENABLE_ATCDCL, test "x$enable_atcdcl" != "xno")
+AM_CONDITIONAL(ENABLE_ATCDCL, test "x$enable_atcdcl" = "xyes")
 
 
 
@@ -908,7 +908,7 @@ else
     echo "Include special purpose flight models: no"
 fi
 
-if test "x$enable_atcdcl" != "xno"; then
+if test "x$enable_atcdcl" = "xyes"; then
     echo "Build depricated ATC/AI module: yes"
 else
     echo "Build depricated ATC/AI module: no"
