Disable a test built entirely on Point3D and PLIB/SG

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,6 +1,6 @@
 bin_PROGRAMS = est-epsilon gl-info alcinfo
 
-noinst_PROGRAMS = test-gethostname test-mktime test-text test-up test-env-map
+noinst_PROGRAMS = test-gethostname test-mktime test-text test-env-map
 
 if HAVE_FRAMEWORK_PLIB
 test_up_LDFLAGS = $(plib_FRAMEWORK)
@@ -26,5 +26,3 @@ test_mktime_SOURCES = test-mktime.cxx
 
 test_text_SOURCES = test-text.cxx
 
-test_up_SOURCES = test-up.cxx
-test_up_LDADD = $(test_up_PLIB_LIBS) -lsgmath -lsgxml -lsgmisc -lsgdebug -lsgstructure -lsgtiming -lz $(base_LIBS)
