Added some stubs in the flightgear main code to eventually add a full, FGSubsystems based ATIS system that will serve as a replacement for the ATCDCL code.

--- a/src/ATC/Makefile.am
+++ b/src/ATC/Makefile.am
@@ -2,6 +2,7 @@ noinst_LIBRARIES = libATC.a
 
 libATC_a_SOURCES = \
 	atcutils.cxx atcutils.hxx \
+	atis.cxx atis.hxx \
 	trafficcontrol.cxx trafficcontrol.hxx 
 
 INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src
