--- a/projects/VC100/xmlgrep/xmlgrep.vcxproj
+++ b/projects/VC100/xmlgrep/xmlgrep.vcxproj
@@ -122,7 +122,7 @@
       <PrecompiledHeader>
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
-      <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
+      <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
