--- a/projects/VC100/metar/metar.vcxproj
+++ b/projects/VC100/metar/metar.vcxproj
@@ -125,7 +125,7 @@
       <PrecompiledHeader>
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
-      <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
+      <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
     </ClCompile>
     <Link>
       <AdditionalDependencies>sg_d.lib;ul_d.lib;net_d.lib;ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
