Revert "Create TimeManager subsystem" - not quite ready for prime-time yet!
This reverts commit 50eb95dcadaf39d892212f2c5c6fe2459b190719.

--- a/projects/VC90/FlightGear/FlightGear.vcproj
+++ b/projects/VC90/FlightGear/FlightGear.vcproj
@@ -4512,11 +4512,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\..\src\Time\TimeManager.cxx"
+				RelativePath="..\..\..\src\Time\tmp.cxx"
 				>
 			</File>
 			<File
-				RelativePath="..\..\..\src\Time\TimeManager.hxx"
+				RelativePath="..\..\..\src\Time\tmp.hxx"
 				>
 			</File>
 		</Filter>
