--- a/src/Time/Makefile.am
+++ b/src/Time/Makefile.am
@@ -3,6 +3,6 @@ noinst_LIBRARIES = libTime.a
 libTime_a_SOURCES = \
 	light.cxx light.hxx \
 	sunsolver.cxx sunsolver.hxx \
-	TimeManager.cxx TimeManager.hxx
+	tmp.cxx tmp.hxx
 
 INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src
